--- a/views/index.html
+++ b/views/index.html
@@ -2,24 +2,29 @@
 <html>
 
 <head>
+    <!-- I just added the bootstrap CDN to save time -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="/css/styles.css" rel="stylesheet" type="text/css">
     <script src="/jquery/jquery.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <title>StreetUP</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🥊</text></svg>">
+    <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🥊</text></svg>">
 </head>
 
 <body>
     <header>
         <div class="banner" id="userCreate">
-                <form id="startForm" action="">
+            <form id="startForm" action="">
                 <h1>&#129354 StreetUP 💉 </h1>
-                    <label for="realName" id="label">Your Name:</label>
-                    <input id="realName" autocomplete="off" placeholder="zark muckerburg" required />
-                    <br><br>
-                    <button id="input" type="submit">Create character</button>
-                </form>
-            <audio controls loop id="shoe" src="https://download1519.mediafire.com/0f4iq8cgthng/5ca7kpuymrnt5xo/shoes.mp3"></audio>
+                <label for="realName" id="label">Your Name:</label>
+                <input id="realName" autocomplete="off" placeholder="zark muckerburg" required />
+                <br><br>
+                <button id="input" type="submit">Create character</button>
+            </form>
+            <audio controls loop id="shoe"
+                src="https://download1519.mediafire.com/0f4iq8cgthng/5ca7kpuymrnt5xo/shoes.mp3"></audio>
         </div>
     </header>
 
