add socket,io rooms, squash bugs, make more bugs, get payed.

--- a/views/index.html
+++ b/views/index.html
@@ -15,16 +15,16 @@
 
 <body>
     <header>
-        <div class="banner" id="userCreate">
+        <div class="banner">
             <form id="startForm" action="">
                 <h1>&#129354 StreetUP 💉 </h1>
                 <label for="realName" id="label">Your Name:</label>
                 <input id="realName" autocomplete="off" placeholder="zark muckerburg" required />
                 <br><br>
-                <button id="input" type="submit">Create character</button>
+                <button type="submit">Let's Go</button>
             </form>
-            <audio controls loop id="shoe"
-                src="https://download1519.mediafire.com/0f4iq8cgthng/5ca7kpuymrnt5xo/shoes.mp3"></audio>
+            <!-- <audio controls loop id="shoe"
+                src="https://download1519.mediafire.com/0f4iq8cgthng/5ca7kpuymrnt5xo/shoes.mp3"></audio> -->
         </div>
     </header>
 
@@ -36,6 +36,6 @@
     </section>
 </body>
 
-<script src="/js/websocket.js" type="text/javascript"></script>
+<script src="/js/scripts.js" type="text/javascript"></script>
 
 </html>
