--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,6 +2,12 @@ body {
   margin: 0;
   padding: 0;
   border: 0;
+  background: rgb(248, 72, 94);
+  background: linear-gradient(
+    90deg,
+    rgba(248, 72, 94, 1) 0%,
+    rgba(81, 45, 109, 1) 76%
+  );
 }
 
 .banner {
@@ -10,11 +16,10 @@ body {
   justify-content: center;
   text-align: center;
   align-items: center;
-  background-image: linear-gradient(to bottom right, lightblue, rgb(238, 148, 238));
   width: 100vw;
   height: 100vh;
-  margin-bottom:0 auto;
-  padding-bottom:0 auto;
+  margin-bottom: 0 auto;
+  padding-bottom: 0 auto;
 }
 
 .hidden {
@@ -30,7 +35,6 @@ h1 {
   display: inline-block;
   text-decoration: none;
   color: black;
-  background-color: rgb(162, 140, 214);
   padding: 0.5em 1.25em;
   border-radius: 0.25em;
 }
@@ -45,12 +49,12 @@ audio {
 }
 
 .waitingRoom {
-  background-image: linear-gradient(to top right, coral, navy);
-  width:100vw;
+  width: 100vw;
   height: auto;
   min-height: 100vh;
-  padding-top:0;
-  margin-top:0;
+  padding-top: 0;
+  margin-top: 0;
+  display: none;
 }
 
 #waitTitle {
@@ -61,7 +65,7 @@ audio {
 }
 
 #playerCards li {
-  display:flex;
+  display: flex;
   justify-content: center;
   text-align: center;
   border: 2px solid black;
@@ -69,9 +73,8 @@ audio {
   margin-left: 7em;
   margin-top: 5em;
   width: 33vw;
-  max-width:750px;
-  float:left;
+  max-width: 750px;
+  float: left;
   background: lightblue;
   border-radius: 0.25em;
-  
 }
