--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-    <!-- I just added the bootstrap CDN to save time -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="/css/styles.css" rel="stylesheet" type="text/css">
@@ -19,8 +18,11 @@
             <form id="startForm">
                 <h1 class="title">StreetUP</h1>
                 <h1>🥊&nbsp;&nbsp;&nbsp;⚔️&nbsp;&nbsp;&nbsp;💉</h1>
-                <p class="label">Your Name:</p>
-                    <input class="form-control" id="realName" autocomplete="off" placeholder="zark muckerburg" required />
+                <p class="label">Your Characters Name:</p>
+                    <input class="form-control" id="charName" autocomplete="off" placeholder="zark muckerburg" style="text-align: center;" required />
+                    <br>
+                    <p class="label">Your character Description:</p>
+                    <input class="form-control" id="charDesc" autocomplete="off" placeholder="owns Face- i mean Meta" style="text-align: center;" required />
                     <br>
                     <button type="submit" class="btn btn-dark">Let's Fight</button>
                     <br><br>
@@ -35,12 +37,13 @@
     </header>
 
     <section class="waitingRoom">
-        <div class="container">
-            <h1 id="waitTitle">Waiting for other players.</h1>
+        <div id="withinContainer" class="container">
+            <h1 id="waitingStatus" class="waitTitle">Waiting for other players.</h1>
+            <p id="specCount" class="waitTitle"></p>
+            <div class="waitTitle" id="buttonSpot"></div>
         </div>
-        <div id="buttonSpot"></div>
-
     </section>
+
 </body>
 
 <script src="/js/scripts.js" type="text/javascript"></script>
