--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,7 +2,6 @@ body {
   margin: 0;
   padding: 0;
   border: 0;
-  background: rgb(248, 72, 94);
   background: linear-gradient(
     90deg,
     rgba(248, 72, 94, 1) 0%,
@@ -12,6 +11,8 @@ body {
 
 .banner {
   display: flex;
+  background-image: url("../img/pexels-maxime-francis-2246476.jpg");
+  background-size: 100%;
   flex-direction: column;
   justify-content: center;
   text-align: center;
@@ -65,21 +66,37 @@ audio {
   color: white;
 }
 
+#playerCards {
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top:1em;
+}
+
 #playerCards li {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   text-align: center;
+  float:left;
+  margin-left:2em;
+  margin-top:2em;
   border: 2px solid white;
   padding: 1em;
-  margin-left: 7em;
-  margin-top: 5em;
   width: 33vw;
-  max-width: 750px;
+  height:20vh;
   float: left;
   color: white;
   background: transparent;
   /* backdrop-filter: blur(60px); */
   border-radius: 0.50em;
+}
+
+
+.rules li{
+  text-align: start;
 }
 
 .title,
@@ -90,4 +107,62 @@ audio {
 .label{
   color: white;
   font-weight: bold;
+}
+
+#roundOne {
+  display:flex;
+  flex-direction: column;
+  width:100vw;
+  height:100vh;
+  
+}
+
+#questionOneForm {
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#questionOneSubmit {
+  margin-top:2em;
+  align-items: center;
+  width:50%;
+}
+
+#votingOne {
+  width:100vw;
+  height:100vh;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#selectableAnswers {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  max-width:80vw;
+  
+}
+
+#selectableAnswers h1 {
+  margin-bottom: 0.5em;
+}
+
+#selectableAnswers button {
+  text-align: center;
+  border: 2px solid white;
+  padding: 0.5em;
+  margin-left: 1em;
+  margin-top: 1em;
+  width: 50vw;
+  max-width: 750px;
+  height:14vh;
+  float: left;
+  color: white;
+  background: lightblue;
+  /* backdrop-filter: blur(60px); */
+  border-radius: 0.50em;
 }
