add scoreboard section

--- a/views/index.html
+++ b/views/index.html
@@ -61,7 +61,17 @@
     <div id="hiddenVoteOne" class="hidden">
         <div id="votingOne" class="hidden container">
             <h1>Vote on which answer is best!</h1>
+            <h6>One click, One vote!!</h6>
             <div id="selectableAnswers"></div>
+        </div>
+    </div>
+
+    <div id ="hiddenScoreBoard" class ="hidden">
+        <div id="scoreBoard" class ="container">
+            <h3>Leaderboard</h3>
+            <hr/>
+            <ol id="leaderBoard">
+            </ol>
         </div>
     </div>
     
