add all logic for second and last round

--- a/views/index.html
+++ b/views/index.html
@@ -59,7 +59,7 @@
         </div>
     </div>
     <div id="hiddenVoteOne" class="hidden">
-        <div id="votingOne" class="hidden container">
+        <div id="votingOne" class="container">
             <h1>Vote on which answer is best!</h1>
             <h6>One click, One vote!!</h6>
             <div id="selectableAnswers"></div>
@@ -74,6 +74,59 @@
             </ol>
         </div>
     </div>
+    <div id="hiddenRoundTwo" class="hidden">
+        <div id ="roundTwo" class="container" >
+            <h1 id = "questionTwoName"></h1>
+            <form id="questionTwoForm">
+                <label for="answerTwo">Answer:</label>
+                <input class="form-control" id="answerTwo" autocomplete="off" placeholder="Helen Keller" style="text-align: center;" required />
+                <button type="submit" id="questionTwoSubmit">Submit Answer!</button>
+            </form>
+        </div>
+    </div>
+    <div id="hiddenVoteTwo" class="hidden">
+        <div id="votingTwo" class="container">
+            <h1>Vote on which answer is best!</h1>
+            <h6>One click, One vote!!</h6>
+            <div id="selectableAnswers2"></div>
+        </div>
+    </div> 
+
+    <div id ="hiddenScoreBoardTwo" class ="hidden">
+        <div id="scoreBoardTwo" class ="container">
+            <h3>Leaderboard</h3>
+            <hr/>
+            <ol id="leaderBoardTwo">
+            </ol>
+        </div>
+    </div>
+    
+    <div id="hiddenFinalRound" class="hidden">
+        <div id ="finalRound" class="container" >
+            <h1 id = "finalQuestionName"></h1>
+            <form id="finalQuestionForm">
+                <label for="finalAnswer">Answer:</label>
+                <input class="form-control" id="finalAnswer" autocomplete="off" placeholder="Helen Keller" style="text-align: center;" required />
+                <button type="submit" id="finalQuestionSubmit">Submit Answer!</button>
+            </form>
+        </div>
+    </div>
+    <div id="hiddenFinalVote" class="hidden">
+        <div id="finalVoting" class="container">
+            <h1>Vote on which answer is best!</h1>
+            <h6>One click, One vote!!</h6>
+            <div id="finalSelectableAnswers"></div>
+        </div>
+    </div> 
+    <div id ="hiddenFinalScoreBoard" class ="hidden">
+        <div id="finalScoreBoard" class ="container">
+            <h3>Leaderboard</h3>
+            <hr/>
+            <ol id="finalLeaderBoard">
+            </ol>
+        </div>
+    </div>
+
     
 
 </body>
