--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -72,6 +72,7 @@ audio {
   color: white;
 }
 
+.responseButton,
 #playerCards {
   display:flex;
   flex-direction: row;
@@ -79,7 +80,7 @@ audio {
   align-items: center;
   margin-top:1em;
 }
-
+.responseButton,
 #playerCards li {
   display: flex;
   flex-direction: column;
