--- a/views/index.html
+++ b/views/index.html
@@ -60,24 +60,28 @@
 
     <section class="hidden roundQuestion">
         <div id="withinContainerRoundQuestion" class="container">
-            <h1 id="question" class="waitTitle">Lorem</h1>
-            <div id="responsePlaceholder"></div>
-            <p class="waitTitle">Players will respond to the question above.</p>
-            <div class="waitTitle" id="buttonSpot"></div>
+            <form id="submitResponse">
+                <h1 id="question" class="waitTitle">Lorem</h1>
+                <div id="responsePlaceholder"></div>
+                <p class="waitTitle">Players will respond to the question above.</p>
+                <div class="waitTitle" id="buttonSpot"></div>
+            </form>
         </div>
     </section>
 
     <section class="hidden roundVote">
         <div id="withinContainerRoundVote" class="container">
             <h1 id="waitingStatusRoundVote" class="waitTitle">Choose your favorite response!</h1>
-            <div id="voteCards"></div>
             <p class="waitTitle">Spectators and Players can vote.</p>
+            <div id="voteCards"></div>
+            <br>
+            <br>
         </div>
     </section>
 
     <section class="hidden leaderboard">
         <div id="withinContainer" class="container">
-            <h1 id="waitingStatus" class="waitTitle">lorem</h1>
+            <h1 id="waitingStatusLeaderboard" class="waitTitle">lorem</h1>
             <p class="waitTitle">ipsum</p>
             <div class="waitTitle" id="buttonSpot"></div>
         </div>
