attempt to create round iteration

--- a/views/index.html
+++ b/views/index.html
@@ -71,7 +71,7 @@
 
     <section class="hidden roundVote">
         <div id="withinContainerRoundVote" class="container">
-            <h1 id="waitingStatusRoundVote" class="waitTitle">Choose your favorite response!</h1>
+            <h1 id="waitingStatusRoundVote" class="waitTitle">Choose your favorite response! </h1>
             <p class="waitTitle">Spectators and Players can vote.</p>
             <div id="voteCards"></div>
             <br>
@@ -81,9 +81,10 @@
 
     <section class="hidden leaderboard">
         <div id="withinContainer" class="container">
-            <h1 id="waitingStatusLeaderboard" class="waitTitle">lorem</h1>
-            <p class="waitTitle">ipsum</p>
-            <div class="waitTitle" id="buttonSpot"></div>
+            <h1 id="waitingStatusLeaderboard" class="waitTitle">Leaderboard</h1>
+            <hr>
+            <p class="waitTitle">The game will resume in a few moments</p>
+            <div id="leaderboardPlaceholder"></div>
         </div>
     </section>
 </body>
